Fix spacing and code font

--- a/css/talks.css
+++ b/css/talks.css
@@ -1,35 +1,33 @@
 .title-font {
-  font-family: "Helvetica" !important;
+    font-family: "Helvetica" !important;
 }
 
 .normal-font {
-  font-family: "Helvetica" !important;
-}
-
-.code-font {
-  font-family: "Courier New" !important;
+    font-family: "Helvetica" !important;
 }
 
 a {
-  color: #008C9E !important;
+    color: #008C9E !important;
 }
 
-img, .logo-image {
-  border: none !important;
-  box-shadow: none !important;
-  background: none !important;
+img,
+.logo-image {
+    border: none !important;
+    box-shadow: none !important;
+    background: none !important;
 }
-
 .logo-image {
   max-width: 45% !important;
   max-height: 95% !important;
 }
 
-backquote, .reveal p, .reveal li, #credit {
+backquote,
+.reveal p,
+.reveal li,
+#credit {
   font-family: "Helvetica"; !important;
   font-weight: 300 !important;
 }
-
 backquote {
   font-style: italic;
   font-weight: 100 !important;
@@ -39,14 +37,9 @@ backquote {
   color: #FFFFFF !important;
 }
 
-code {
-  font-family: "fira-mono" !important;
-}
-
 .reveal {
     font-size: 2.5em;
 }
-
 .reveal h1 {
   font-family: "Helvetica" !important;
   font-weight: 500;
@@ -54,7 +47,6 @@ code {
   font-size: 2.6em;
   color: #008C9E;
 }
-
 .reveal h2 {
   color: #008C9E;
   font-family: "Helvetica" !important;
@@ -63,20 +55,31 @@ code {
   font-size: 2.2em !important;
   color: #008C9E;
 }
-
-h2.smaller {
-  font-size: 1.8em !important;
-}
-
 .reveal h3 {
   font-family: "Helvetica" !important;
   font-weight: 500;
   text-transform: none !important;
   font-size: 1.2em !important;
 }
-
 .reveal .slides section .fragment.visible {
-    line-height: initial;
+  line-height: initial;
+}
+.reveal pre code {
+  font-family: "Courier New" !important;
+  background: none;
+  color: #565459;
+  overflow: hidden;
+  line-height: 1.15em;
+}
+.reveal pre {
+  box-shadow: none;
+}
+.reveal li {
+    line-height: 1.5em !important;
+}
+
+h2.smaller {
+  font-size: 1.8em !important;
 }
 
 #credit {
@@ -89,34 +92,18 @@ h2.smaller {
   border-radius: 6px;
   font-size: 1.5em;
 }
-
 #credit a {
-
   text-decoration: none !important;
-}
-
-.reveal pre code {
-  background: none;
-  color: #565459;
-  overflow: hidden;
-  line-height: 1.15em;
-}
-
-.reveal pre {
-  box-shadow: none;
 }
 
 .present.image-section  {
   background-color: rgba(255, 255, 255, 0.4);
   box-shadow: rgba(255, 255, 255, 0.4) 0px 0px 75px 50px;
-  /*border-radius: 8px;*/
 }
-
 .present.more-opaque {
   background-color: rgba(255, 255, 255, 0.6);
   box-shadow: rgba(255, 255, 255, 0.6) 0px 0px 75px 50px;
 }
-
 .present.even-more-opaque {
   background-color: rgba(255, 255, 255, 0.9);
   box-shadow: rgba(255, 255, 255, 0.9) 0px 0px 75px 50px;
@@ -125,7 +112,6 @@ h2.smaller {
 .good {
   color: #1c6b2a;
 }
-
 .not-so-good {
   color: #8b2e17;
 }
@@ -144,9 +130,8 @@ h2.smaller {
   display: flex;
   flex-wrap: wrap;
 }
-
 .logos img {
-  height: 100px;
-  padding-right: 20px;
-  padding-bottom: 20px;
+    height: 100px;
+    padding-right: 20px;
+    padding-bottom: 20px;
 }
